--- a/ttbar_project/plotting_code.ipynb
+++ b/ttbar_project/plotting_code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 133,
    "id": "200b8bd5-5673-4d7e-9cff-3b377d438f8c",
    "metadata": {},
    "outputs": [
@@ -10,14 +10,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "opened qcd.root with 142 entries as QCD\n",
-      "opened wjets.root with 109737 entries as WJets\n",
-      "opened single_top.root with 5684 entries as Single Top\n",
-      "opened ww.root with 4580 entries as WW\n",
-      "opened ttbar.root with 36941 entries as TTbar\n",
-      "opened wz.root with 3367 entries as WZ\n",
-      "opened zz.root with 2421 entries as ZZ\n",
-      "opened dy.root with 77729 entries as DYJets\n"
+      "Opened qcd.root with 142 entries as QCD\n",
+      "Opened wjets.root with 109737 entries as WJets\n",
+      "Opened single_top.root with 5684 entries as Single Top\n",
+      "Opened ww.root with 4580 entries as WW\n",
+      "Opened ttbar.root with 36941 entries as TTbar\n",
+      "Opened wz.root with 3367 entries as WZ\n",
+      "Opened zz.root with 2421 entries as ZZ\n",
+      "Opened dy.root with 77729 entries as DYJets\n"
      ]
     }
    ],
@@ -46,11 +46,6 @@
     "JES_DELTA = 0.02  # Variation in jet 4-momenta for JES systematic\n",
     "TOP_MASS_MC = 172.5\n",
     "\n",
-    "# path to the root files\n",
-    "path = './root_files/'\n",
-    "\n",
-    "neworder = [0, 8, 1, 7, 4, 3, 5, 6, 2]\n",
-    "\n",
     "files = [\n",
     "    # {\"filename\": \"data.root\", \"label\": \"Data\", \"color\": \"white\"},\n",
     "    {\"filename\": \"qcd.root\", \"label\": \"QCD\", \"color\": \"#a9a9a9\"},\n",
@@ -71,22 +66,22 @@
     "    \"EventWeight\"\n",
     "]\n",
     "\n",
+    "path = './root_files/'\n",
     "TTreeName = \"events\"\n",
     "EventWeightBranchName = \"EventWeight\"\n",
     "\n",
     "plt.style.use([hep.style.ROOT, hep.style.firamath])\n",
-    "dfs = [uproot.open(path + file[\"filename\"] + ':' + TTreeName) for file in files]\n",
     "dfs = {}\n",
     "\n",
     "for file in files:\n",
     "    tree = uproot.open(path + file[\"filename\"] + \":\" + TTreeName)\n",
     "    dfs[file[\"label\"]] = tree.arrays(COLUMN_NAMES, library = \"ak\")\n",
-    "    print('opened %s with %d entries as %s' % (file[\"filename\"], len(dfs[file[\"label\"]]), file[\"label\"]))"
+    "    print(\"Opened %s with %d entries as %s\" % (file[\"filename\"], len(dfs[file[\"label\"]]), file[\"label\"]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 135,
    "id": "ef392393-0407-4181-8855-0c7c6aebd857",
    "metadata": {},
    "outputs": [],
@@ -100,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 136,
    "id": "08bccba9-4559-4bcb-904d-c48212bb872a",
    "metadata": {},
    "outputs": [],
@@ -312,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 137,
    "id": "d356c7c3-4bdb-4aeb-bdca-0497789f4e4a",
    "metadata": {},
    "outputs": [
@@ -333,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 138,
    "id": "a2c865de-9ec4-4588-afc7-d7517bd093c5",
    "metadata": {},
    "outputs": [
@@ -354,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 141,
    "id": "681074d2-3f39-49c1-9941-88b77e67808d",
    "metadata": {},
    "outputs": [
